--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@ initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
                     <div class="user">
                         <img src="img/prof-1.jpg" alt="">
                         <div class="user-info">
-                            <h3>علیرضا رحمانی </h3>
+                            <h3> جسی پینکمن </h3>
                             <div class="stars">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
